[workspace]
members = [
    "crates/contracts",
    "crates/contracts/amm",
    "crates/contracts/hydentity",
    "crates/contracts/hyllar",
    "crates/contracts/staking",
    "crates/contracts/risc0-recursion",
    "crates/contracts/uuid-tld",

    "crates/bonsai-runner",
    "crates/client-sdk",
    "crates/contract-sdk",
    "crates/hyle-loadtest",
    "crates/hyle-model",
    "crates/hyle-verifiers",
    ".",
]
default-members = [
    "crates/contracts",
    "crates/contracts/hydentity",
    "crates/hyle-loadtest",
    "crates/hyle-model",
    ".",
]
resolver = "2"

[workspace.package]
version = "0.12.0"
edition = "2021"
homepage = "https://hyle.eu/"
repository = "https://github.com/Hyle-org/hyle/"
rust-version = "1.84"
# licence = ""

[package]
name = "hyle"
version = { workspace = true }
edition = { workspace = true }
# license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
default-run = "hyle"


[[bin]]
name = "hyle"

[[bin]]
name = "indexer"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
unused_result_ok = "warn"
indexing_slicing = "warn"

[dependencies]
# Public dependencies
hyle-contract-sdk = { path = "./crates/contract-sdk", default-features = false, features = [
    "tracing",
] }
staking = { path = "./crates/contracts/staking", default-features = false, features = [
    "client",
] }
client-sdk = { path = "./crates/client-sdk", default-features = false, features = [
    "rest",
    "tcp",
    "indexer"
] }
hyle-model = { path = "./crates/hyle-model", default-features = false, features = [
    "full",
    "sqlx",
] }
hydentity = { path = "./crates/contracts/hydentity", features = ["client"] }
hyllar = { path = "./crates/contracts/hyllar", features = ["client"] }
risc0-recursion = { path = "./crates/contracts/risc0-recursion" }

hyle-verifiers = { path = "crates/hyle-verifiers" }


anyhow = "1.0.96"
borsh = { version = "1.5.5", features = ["rc"] }
blst = { version = "0.3.14" }
chrono = { version = "0.4", features = ["serde"] }
hex = { version = "0.4.3" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1" }
sha3 = "0.10.8"
strum_macros = "0.27.1"
tracing = "0.1"

anymap = { version = "0.12.1" }
assertables = { version = "9.5.0" }
axum = { version = "0.8.1", features = ["ws", "macros"] }
axum-otel-metrics = { version = "0.10.0" }
bytes = { version = "1.10.0" }
clap = { version = "4.5.30", features = ["derive"] }
config = { version = "=0.15.0", default-features = false, features = ["ron"] }
futures = { version = "0.3.31" }
hyle-contracts = { path = "./crates/contracts", package = "hyle-contracts" }
indexmap = { version = "2.7.1", features = ["serde"] }
# opentelemetry and axum-otel-metrics must be updated together (so that there is only one opentelemetry version)
opentelemetry = { version = "0.28" }
opentelemetry-prometheus = { version = "0.28.0" }
opentelemetry_sdk = "0.28.0"
paste = { version = "1.0.15" }
prometheus = { version = "0.13.4" }
quote = { version = "1.0.38" }
rand = { version = "0.9" }
ron = { version = "0.8.1" }
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "postgres",
    "migrate",
    "chrono",
] }
syn = { version = "2.0.98" }
tokio = { version = "1.42.0", features = ["full", "tracing"] }
tokio-util = { version = "0.7.13" }
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
    "json",
] }
fjall = { version = "2.6.5" }

dhat = { version = "0.3.3", optional = true }
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
utoipa-axum = { version = "0.2.0" }
testcontainers-modules = { version = "0.11.6", features = ["postgres"] }

[dev-dependencies]
amm = { path = "./crates/contracts/amm", features = ["client"] }
uuid-tld = { path = "./crates/contracts/uuid-tld", features = ["client"] }
client-sdk = { path = "./crates/client-sdk", default-features = false, features = [
    "rest",
    "tcp",
    "risc0",
] }

assert_cmd = "2.0.16"
axum-test = { version = "17.2.0" }
tokio-tungstenite = "0.26.2"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde_json = "1.0.139"
test-log = { version = "0.2.17", features = [
    "color",
    "trace",
], default-features = false }
tokio-stream = "0.1.17"
tempfile = "3.17.1"
assert-json-diff = "2.0.2"
risc0-recursion = { path = "./crates/contracts/risc0-recursion" }
risc0-zkvm = { version = "1.3.0", default-features = false, features = [
    "client",
] }
signal-child = "1.0.6"

[features]
default = []

sp1 = ["hyle-verifiers/sp1"]

dhat = ["dep:dhat"]
# Activate this feature to recompile contracts locally (mostly useful for iterating on tests)
nonreproducible = ["hyle-contracts/nonreproducible"]
node_local_proving = ["risc0-zkvm/client"]

[profile.release]
lto = "thin"
incremental = true

[profile.profiling]
inherits = "release"
debug = true         # Keep debug info for profiling
strip = "none"

# Optimize the following crates for development builds so tests are faster
[profile.dev.package.risc0-binfmt]
opt-level = 3

[profile.dev.package.sha2]
opt-level = 3
