[workspace]
members = [
  "crates/contracts",
  "crates/contracts/amm",
  "crates/contracts/hydentity",
  "crates/contracts/hyllar",
  "crates/contracts/smt-token",
  "crates/contracts/staking",
  "crates/contracts/risc0-recursion",
  "crates/contracts/uuid-tld",

  "crates/bonsai-runner",
  "crates/client-sdk",
  "crates/contract-sdk",
  "crates/hyle-loadtest",
  "crates/hyle-model",
  "crates/hyle-crypto",
  "crates/hyle-verifiers",
  "crates/noir-tools",
  "crates/hyle-modules",
]
default-members = [
  "crates/contracts",
  "crates/contracts/hydentity",
  "crates/hyle-loadtest",
  "crates/hyle-model",
  "crates/hyle-crypto",
  "crates/hyle-net",
  "crates/hyle-modules",
  ".",
]
resolver = "2"

[workspace.package]
version = "0.13.0-rc.4"
edition = "2021"
homepage = "https://hyli.org/"
repository = "https://github.com/hyli-org/hyli/"
rust-version = "1.84"
license-file = "LICENSE"

[workspace.dependencies]
bonsai-runner = { version = "0.13.0-rc.4", default-features = false, path = "crates/bonsai-runner", package = "hyle-bonsai-runner" }
sdk = { version = "0.13.0-rc.4", default-features = false, path = "crates/contract-sdk", package = "hyle-contract-sdk" }
hyle-contract-sdk = { version = "0.13.0-rc.4", default-features = false, path = "crates/contract-sdk", package = "hyle-contract-sdk" }
client-sdk = { version = "0.13.0-rc.4", default-features = false, path = "crates/client-sdk", package = "hyle-client-sdk" }
hyle-net = { version = "0.13.0-rc.4", default-features = false, path = "crates/hyle-net", package = "hyle-net" }
hyle-model = { version = "0.13.0-rc.4", default-features = false, path = "crates/hyle-model", package = "hyle-model" }
hyle-crypto = { version = "0.13.0-rc.4", default-features = false, path = "crates/hyle-crypto", package = "hyle-crypto" }
hyle-verifiers = { version = "0.13.0-rc.4", default-features = false, path = "crates/hyle-verifiers", package = "hyle-verifiers" }
risc0-recursion = { version = "0.13.0-rc.4", default-features = false, path = "crates/contracts/risc0-recursion", package = "hyle-risc0-recursion" }
hydentity = { version = "0.13.0-rc.4", default-features = false, path = "crates/contracts/hydentity", package = "hyle-hydentity" }
hyllar = { version = "0.13.0-rc.4", default-features = false, path = "crates/contracts/hyllar", package = "hyle-hyllar" }
smt-token = { version = "0.13.0-rc.4", default-features = false, path = "crates/contracts/smt-token", package = "hyle-smt-token" }
staking = { version = "0.13.0-rc.4", default-features = false, path = "crates/contracts/staking", package = "hyle-staking" }
amm = { version = "0.13.0-rc.4", default-features = false, path = "crates/contracts/amm", package = "hyle-amm" }
uuid-tld = { version = "0.13.0-rc.4", default-features = false, path = "crates/contracts/uuid-tld", package = "hyle-uuid-tld" }
hyle-contracts = { version = "0.13.0-rc.4", default-features = false, path = "crates/contracts", package = "hyle-contracts" }
hyle-modules = { version = "0.13.0-rc.4", default-features = false, path = "crates/hyle-modules", package = "hyle-modules" }

[package]
name = "hyle"
description = "Hyli node"
license-file = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
default-run = "hyle"

[[bin]]
name = "hyle"

[[bin]]
name = "indexer"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
unused_result_ok = "warn"
indexing_slicing = "warn"
undocumented_unsafe_blocks = "warn"

[dependencies]
# Public dependencies
hyle-contract-sdk = { workspace = true, default-features = false, features = [
  "tracing",
] }
staking = { workspace = true, default-features = false, features = ["client"] }
client-sdk = { workspace = true, features = ["rest", "indexer"] }
hyle-net = { workspace = true }
hyle-model = { workspace = true, default-features = false, features = [
  "full",
  "sqlx",
] }
hyle-crypto = { workspace = true }
hydentity = { workspace = true, features = ["client"] }
hyllar = { workspace = true, features = ["client"] }
smt-token = { workspace = true, features = ["client"] }
risc0-recursion = { workspace = true }
hyle-verifiers = { workspace = true }
hyle-contracts = { workspace = true }
hyle-modules = { workspace = true }


anyhow = "1.0.98"
borsh = { version = "1.5.6", features = ["rc"] }
chrono = { version = "0.4", features = ["serde"] }
hex = { version = "0.4.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1" }
serde_with = "3.12.0"
sha3 = "0.10.8"
strum_macros = "0.27.1"
tracing = "0.1"

assertables = { version = "9.5.2" }
axum = { version = "0.8.4", features = ["macros"] }
bytes = { version = "1.10.0" }
clap = { version = "4.5.38", features = ["derive"] }
config = { version = "0.15.9", default-features = false, features = ["toml"] }
futures = { version = "0.3.31" }
indexmap = { version = "2.9.0", features = ["serde"] }
opentelemetry = { version = "0.28" }
opentelemetry-prometheus = { version = "0.28.0" }
opentelemetry_sdk = "0.28.0"
paste = { version = "1.0.15" }
prometheus = { version = "0.13.4" }
rand = { version = "0.8.5" }
sqlx = { version = "0.8.4", features = [
  "runtime-tokio",
  "postgres",
  "migrate",
  "chrono",
] }
tokio = { version = "1.44.2", features = ["full", "tracing"] }
tokio-util = { version = "0.7.14" }
# tower-http = { version = "0.6.2", features = ["trace", "cors"] }
fjall = { version = "2.10.0" }

dhat = { version = "0.3.3", optional = true }
alloc-metrics = { version = "0.1.1", optional = true }
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-axum = { version = "0.2.0" }
testcontainers-modules = { version = "0.12.0", features = ["postgres"] }
toml = "0.8.22"

# We force zip version here as later version is not compatible with utoipa-swagger-ui
zip = "=3.0.0"
seq-macro = "0.3.6"
async-stream = "0.3.6"

[package.metadata.cargo-machete]
ignored = ["zip", "bytes", "tokio-util"]

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }

[dev-dependencies]
amm = { workspace = true, features = ["client"] }
uuid-tld = { workspace = true, features = ["client"] }
smt-token = { workspace = true, features = ["client"] }
client-sdk = { workspace = true, default-features = false, features = [
  "rest",
  "risc0",
] }
hyle-modules = { workspace = true, default-features = false, features = [
  "test",
] }

assert_cmd = "2.0.17"
axum-test = { version = "17.2.0" }
tokio-tungstenite = "0.26.2"
serde_json = "1.0.140"
test-log = { version = "0.2.17", features = [
  "color",
  "trace",
], default-features = false }
tokio-stream = "0.1.17"
tempfile = "3.20.0"
assert-json-diff = "2.0.2"
risc0-recursion = { workspace = true }
risc0-zkvm = { version = "2.0.2", default-features = false, features = [
  "client",
] }
signal-child = "1.0.6"

[features]
default = ["risc0"]

turmoil = ["hyle-net/turmoil", "client-sdk/turmoil"]

risc0 = ["hyle-verifiers/risc0", "client-sdk/risc0"]
sp1 = ["hyle-verifiers/sp1", "client-sdk/sp1"]

# Disable dependency keyring by default, as it requires libdbus
keyring = ["hyle-crypto/keyring"]

dhat = ["dep:dhat"]
monitoring = ["dep:alloc-metrics"]

# Activate this feature to recompile contracts locally (mostly useful for iterating on tests)
nonreproducible = ["hyle-contracts/nonreproducible"]
node_local_proving = ["risc0-zkvm/client"]

[profile.release]
lto = "thin"
incremental = true

[profile.profiling]
# Turn off LTO, takes too long
lto = "off"
inherits = "release"
debug = true         # Keep debug info for profiling
strip = "none"

# Optimize the following crates for development builds so tests are faster
[profile.dev.package.risc0-binfmt]
opt-level = 3

[profile.dev.package.sha2]
opt-level = 3
