
[package]
name = "hyle-contracts"
version = { workspace = true }
edition = { workspace = true }
# license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lib]
path = "metadata.rs"

[dependencies]
sdk = { path = "../contract-sdk", package = "hyle-contract-sdk" }

[build-dependencies]
cargo-manifest = "0.17.0"
risc0-build = { version = "1.2.0", optional = true }
toml = "0.8.19"

[package.metadata.risc0]
methods = ["amm", "hyllar", "hydentity", "staking", "risc0-recursion"]

[features]
amm = ["build"]
all_guests = ["amm", "hydentity", "hyllar", "risc0-recursion", "staking"]
build = ["dep:risc0-build"]
hydentity = ["build"]
hyllar = ["build"]
nonreproducible = ["build", "all_guests"]
risc0-recursion = ["build"]
staking = ["build"]
