[package]
name = "amm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "amm"
required-features = ["risc0"]

[dependencies]
sdk = { path = "../../contract-sdk", package = "hyle-contract-sdk" }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
anyhow = "1.0.89"
sha3 = "0.10.8"
bincode = { version = "2.0.0-rc.2", tag = "v2.0.0-rc.2", git = "https://github.com/bincode-org/bincode.git" }

risc0-zkvm = { version = "1.2.0", default-features = false, features = [
    'std',
], optional = true }

[features]
risc0 = ["dep:risc0-zkvm", "sdk/risc0"]
