[package]
name = "amm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "amm"

[dependencies]
sdk = { path = "../../contract-sdk", package = "hyle-contract-sdk" }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
anyhow = "1.0.89"
sha3 = "0.10.8"
bincode = { version = "2.0.0-rc.3" }

risc0-zkvm = { version = "1.2.0", default-features = false, optional = true }
sp1-zkvm = { version = "3.4.0", default-features = false, optional = true }

[features]
default = ["risc0"]
risc0 = ["dep:risc0-zkvm", "sdk/risc0"]
sp1 = ["sp1-zkvm", "sdk/sp1"]
