[package]
name = "hydentity"
version = { workspace = true }
edition = { workspace = true }
# license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "hydentity"
required-features = ["risc0"]

[dependencies]
sdk = { path = "../../contract-sdk", package = "hyle-contract-sdk" }
serde_json = "1.0"
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
anyhow = "1.0.89"
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8" }
bincode = { version = "2.0.0-rc.3" }
hex = "0.4.3"

risc0-zkvm = { version = "1.2.0", default-features = false, features = [
    'std',
], optional = true }

[features]
risc0 = ["dep:risc0-zkvm", "sdk/risc0"]
