[package]
name = "hyllar"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hyllar"
required-features = ["risc0"]

[dependencies]
sdk = { path = "../../contract-sdk", package = "hyle-contract-sdk" }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
anyhow = "1.0.89"
sha3 = "0.10.8"
bincode = { version = "2.0.0-rc.3" }
serde_with = "3.11.0"

risc0-zkvm = { version = "1.2.0", default-features = false, features = [
    'std',
], optional = true }

[dev-dependencies]
risc0-zkvm = { version = "1.2.0", default-features = false, features = [
    'std',
    'prove',
] }


[features]
risc0 = ["dep:risc0-zkvm", "sdk/risc0"]
