[package]
name = "hyllar"
version = { workspace = true }
edition = { workspace = true }
# license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "hyllar"
required-features = ["risc0"]
test = false

[dependencies]
sdk = { path = "../../contract-sdk", package = "hyle-contract-sdk" }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
anyhow = "1.0.89"
sha3 = "0.10.8"
bincode = { version = "2.0.0-rc.3" }
serde_with = "3.11.0"

risc0-zkvm = { version = "1.2.0", default-features = false, optional = true, features = [
    'std',
] }
client_sdk = { path = "../../crates/client-sdk", package = "client-sdk", optional = true }

[dev-dependencies]
risc0-zkvm = { version = "1.2.0", default-features = false, features = [
    'std',
    'prove',
] }

[features]
default = ["metadata"]
metadata = []
client = ["metadata", "dep:client_sdk"]
risc0 = ["dep:risc0-zkvm", "sdk/risc0"]
