[package]
name = "risc0-recursion"
version = { workspace = true }
edition = { workspace = true }
# license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "risc0-recursion"
required-features = ["risc0"]
path = "src/bin/guest.rs"
test = false

[[example]]
name = "risc0-recursion-runner"
path = "examples/host.rs"

[dependencies]
sdk = { path = "../../contract-sdk", package = "hyle-contract-sdk" }
serde = { version = "1.0.216", features = ["derive"] }

risc0-zkvm = { version = "1.2.0", default-features = false, optional = true, features = [
    'std',
] }

[dev-dependencies]
bincode = "2.0.0-rc.3"
borsh = "1.5.3"
hex = "0.4.3"
hydentity = { path = "../hydentity" }
hyle-contracts = { path = ".." }
hyrun = { path = "../../crates/hyrun" }
risc0-zkvm = { version = "1.2.0", default-features = false, features = [
    'std',
    'prove',
] }
tempfile = "3.14.0"
test-log = { version = "0.2.16", features = [
    "color",
    "trace",
], default-features = false }

[features]
default = ["metadata"]
metadata = []
risc0 = ["dep:risc0-zkvm", "sdk/risc0"]
