[package]
name = "bonsai-runner"
version = { workspace = true }
edition = { workspace = true }
# license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "bonsai-runner"
required-features = ["bonsai-runner"]

[dependencies]
anyhow = "1.0.95"
tracing = "0.1"
hex = "0.4.3"

bonsai-sdk = { version = "1.2.1", features = ["non_blocking"] }
risc0-zkvm = { version = "1.2.0" }
bytemuck = "1.21.0"
# Has to be compatible with whatever bonsai-sdk returns, which is not really documented...
bincode = "1.3.3"
serde = { version = "1.0.217", features = ["derive"] }

# For server only
axum = { version = "0.8.1", features = ["macros"], optional = true }
serde_json = { version = "1.0", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tracing-subscriber = { version = "0.3", optional = true }

[features]
bonsai-runner = ["axum", "serde_json", "tokio", "tracing-subscriber"]

# Feature par défaut
default = ["bonsai-runner"]
