[package]
name = "hyle-bonsai-runner"
description = "Hyli async lib to use risc0 bonsai"
license = "MIT"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[[bin]]
name = "bonsai-runner"
required-features = ["bonsai-runner"]

[dependencies]
anyhow = "1.0.98"
tracing = "0.1"
hex = "0.4.3"
borsh = "1.5.6"

bonsai-sdk = { version = "1.2.4", features = ["non_blocking"] }
boundless-market = "0.7.0"
hyle-net = { workspace = true }
risc0-zkvm = { version = "2.0.2" }
bytemuck = "1.23.0"
# Has to be compatible with whatever bonsai-sdk returns, which is not really documented...
bincode = "1.3.3"
serde = { version = "1.0.219", features = ["derive"] }

# For server only
axum = { version = "0.8.4", features = ["macros"], optional = true }
serde_json = { version = "1.0", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tracing-subscriber = { version = "0.3", optional = true }

[features]
bonsai-runner = ["axum", "serde_json", "tokio", "tracing-subscriber"]

# Feature par défaut
default = ["bonsai-runner"]
