[package]
name = "hyle-client-sdk"
description = "Hyle client SDK"
version = { workspace = true }
edition = { workspace = true }
# license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
sdk = { workspace = true, default-features = false, features = [
    "full-model",
] }
anyhow = "1.0.96"
borsh = "1.5.5"
serde = "1.0"
serde_json = { version = "1" }
tracing = "0.1"

bonsai-runner = { workspace = true, optional = true }
risc0-zkvm = { version = "1.2.4", default-features = false, optional = true }
sp1-sdk = { version = "4.1.3", default-features = false, optional = true }
bincode = { version = "1.3.3", optional = true }

# Rest feature
reqwest = { version = "0.12", features = ["json"], optional = true }

# Tcp feature
tokio = { version = "1.42.0", features = ["full", "tracing"], optional = true }
tokio-util = { version = "0.7.14", optional = true }
futures = { version = "0.3.31", optional = true }

# Indexer feature, these are re-exported
axum = { version = "0.8.1", optional = true }
utoipa = { version = "5.3.1", optional = true }
utoipa-axum = { version = "0.2.0", optional = true }
bytes = { version = "1.10.0", optional = true }
paste = { version = "1.0.15", optional = true }

[features]
rest = ["dep:reqwest"]
tcp = ["dep:reqwest", "dep:tokio", "dep:tokio-util", "dep:futures", "dep:bytes", "dep:paste"]
indexer = ["dep:utoipa", "dep:axum", "dep:utoipa-axum", "dep:tokio"]
risc0 = ["dep:risc0-zkvm", "dep:bonsai-runner"]
sp1 = ["dep:sp1-sdk", "dep:bincode"]
