[package]
name = "hyle-client-sdk"
description = "Hyle client SDK"
license = "MIT"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
sdk = { workspace = true, default-features = false, features = ["full-model"] }
bonsai-runner = { workspace = true, optional = true }
hyle-net = { workspace = true }

anyhow = "1.0.98"
borsh = "1.5.6"
serde = "1.0"
serde_json = { version = "1" }
tracing = "0.1"
anymap = { version = "0.12.1" }
syn = { version = "2.0.101" }
quote = { version = "1.0.39" }
opentelemetry = { version = "0.28" }
rand = { version = "0.8.5" }
futures = { version = "0.3.31" }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "env-filter",
  "fmt",
  "json",
] }
paste = { version = "1.0.15" }

risc0-zkvm = { version = "2.0.2", default-features = false, optional = true }
sp1-sdk = { version = "4.1.3", default-features = false, optional = true }
bincode = { version = "1.3.3", optional = true }


# Tcp feature
tokio = { version = "1.44.2", features = ["full", "tracing"], optional = true }

# Indexer feature, these are re-exported
axum = { version = "0.8.4", optional = true }
utoipa = { version = "5.3.1", optional = true }
utoipa-axum = { version = "0.2.0", optional = true }

[features]
turmoil = ["hyle-net/turmoil"]
rest = []
indexer = ["dep:utoipa", "dep:axum", "dep:utoipa-axum", "dep:tokio"]
risc0 = ["dep:risc0-zkvm", "dep:bonsai-runner"]
sp1 = ["dep:sp1-sdk", "dep:bincode"]

[package.metadata.docs.rs]
all-features = true
