[package]
name = "hyle-contract-sdk"
description = "Hyle smart contract SDK"
version = { workspace = true }
edition = { workspace = true }
# license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = "1.81"

[dependencies]
hyle-model = { workspace = true, default-features = false }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
borsh = "1.5.6"
tracing = { version = "0.1", optional = true }

risc0-zkvm = { version = "1.2.4", default-features = false, optional = true }
sp1-zkvm = { version = "4.1.3", optional = true }

[features]
risc0 = ["dep:risc0-zkvm"]
sp1 = ["dep:sp1-zkvm"]
tracing = ["dep:tracing"]
full-model = ["hyle-model/full"]
