[package]
name = "hyle-contract-sdk"
description = "Hyli smart contract SDK"
license = "MIT"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = "1.81"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
unused_result_ok = "warn"
indexing_slicing = "warn"
undocumented_unsafe_blocks = "warn"

[dependencies]
hyle-model = { workspace = true, default-features = false }
serde = { version = "1.0", default-features = false, features = [
  "derive",
  "alloc",
] }
sha2 = "=0.10.8" # precompile patched at workspace root
borsh = "1.5.6"
tracing = { version = "0.1", optional = true }

sparse-merkle-tree = { version = "0.6.1", optional = true }

risc0-zkvm = { version = "2.0.2", default-features = false, optional = true }
sp1-zkvm = { version = "4.2.0", optional = true }

[features]
risc0 = ["dep:risc0-zkvm"]
sp1 = ["dep:sp1-zkvm"]
smt = ["dep:sparse-merkle-tree"]
tracing = ["dep:tracing"]
full-model = ["hyle-model/full"]
